--- a/workspaces/project_lib2/Cargo.toml
+++ b/workspaces/project_lib2/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 project_lib = { path = "../project_lib" }
 bam = "0.0.11"
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
